# ib_pcode_compiler

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  main.js  source  worker.js
.github/workflows/: deploy.yml  rust.yml
docs/: DOCUMENTATION.md
include/: Math  Methods
include/Collections/: Collection  Queue  Stack
native_classes/: Collection
pkg/: ib_pseudocompiler.d.ts  ib_pseudocompiler.js  ib_pseudocompiler_bg.wasm  ib_pseudocompiler_bg.wasm.d.ts
src/: ast.rs  ast_builder.rs  ast_evaluator.rs  ast_nodes.rs  common.rs  compiler.rs  data.rs  env.rs  grammar.pest  lib.rs  main.rs  tests.rs  utils.rs
src/ast/: ast_io.rs  builder.rs  evaluator.rs  hasher.rs  validator.rs
src/ast/builder/: build_expr.rs  build_stmt.rs
src/ast/evaluator/: eval_expr.rs  exec_stmt.rs
src/ast/validator/: valid_expr.rs  valid_stmt.rs  validate_expr.rs  validate_stmt.rs
src/ast_nodes/: value.rs
src/compiler/: error_print.rs  errors.rs
src/data/: ast_nodes.rs  diagnostic.rs  name_hash.rs  validator.rs  value.rs
src/env/: allocated_lookup_map.rs  local_env.rs
template/: Cargo.toml  LICENSE_MIT
tests/: array_tests.rs  class_tests.rs  common.rs  includes_tests.rs  lib_includes_tests.rs  lib_tests.rs  official_ib_notation_tests.rs  pcode_compiler_tests.rs  standard_tests.rs  tests.rs
web/: docs.js  index.html  main.js  samples.js  style.css  worker.js
web/modules/: marked.js  worker.js
www/: bootstrap.js  docs.js  editor.js  index.html  index.js  package-lock.json  package.json  styles.css  sw.js  webpack.config.js
www/modules/: worker.js
www/src/: docs.js  editor.js  index.js  samples.js  worker.js
www/styles/: _variables.css  base.css  index.css  utilities.css
www/styles/components/: controls.css  docs.css  editor.css  file-label.css  modal.css  panels.css  tables.css  terminal.css  toolbar.css
