[package]
name = "ib_pcode_compiler"
version = "1.0.0"
edition = "2024"
description = "A comprehensive compiler that translates Pcode into an Abstract Syntax Tree (AST) in Rust"
repository = "https://github.com/Fire-Aalt/ib_pseudocompiler"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pest = "2.8.3"
pest_derive = "2.8.3"
rand = "0.10.0-rc.0"
wasm-bindgen = "0.2.104"
console_error_panic_hook = "0.1"
include_dir = "0.7"
getrandom = { version = "*", features = ["wasm_js"] } # feature is required
# web-sys = { version = "0.3.81", features = ["console"] } #for logging
